Rename threading module to avoid collection Fix reference to support data in HSC

--- a/lenskappa/surveys/hsc/hsc.toml
+++ b/lenskappa/surveys/hsc/hsc.toml
@@ -1,5 +1,5 @@
 [support_data.tracts_patches]
-path = "support/hsc/tracts_patches"
+path = "support/tracts_patches"
 format = "txt"
 ids = "ref:data_config.meta.field.choices"
 
