--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ appdirs = "^1.4.4"
 scipy = "^1.8.0"
 heinlein = "^0.4.0"
 multiprocess = "^0.70.13"
+networkx = "^3.0"
 
 [tool.poetry.scripts]
 lenskappa_inference = "lenskappa.analysis.run_inference:run_inference"
