Basic multithreading working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ scipy = "^1.8.0"
 heinlein = "^0.4.0"
 multiprocess = "^0.70.13"
 networkx = "^3.0"
+dask = {extras = ["distributed"], version = "^2023.3.2"}
 
 [tool.poetry.scripts]
 lenskappa_analysis = "lenskappa.analysis.run_analysis:run_analysis"
