--- a/lenskappa/analysis/kappa_ensemble_template.json
+++ b/lenskappa/analysis/kappa_ensemble_template.json
@@ -3,14 +3,9 @@
     "transformations": {
         "build_analyses" : {
             "dependencies": null,
+            "analysis-builder": true,
+            "is-output": true,
             "needed-parameters": ["lens_parameters", "kappa_set_parameters", "output_base_path"]
-        },
-        "attach_wlm": {
-            "dependencies": {"build_analyses": "analyses"}
-        },
-        "run_analyses": {
-            "dependencies": {"build_analyses": "analyses", "attach_wlm": false},
-            "is-output": true
         }
     }
 }
